{
    "name": "MyInput",
    "maps": [
        {
            "name": "MacOs",
            "id": "c211ca2f-9ecc-4c21-ac33-e8055888a49a",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2805fe2f-cb7d-4aab-91cf-ee00eff07fc8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseTouch",
                    "type": "Button",
                    "id": "f70a27b5-374d-4535-a504-8f55024a9647",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "e913d44b-0cd1-4749-a976-7dfaade11b3c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d69aed62-b972-4548-9690-cba23d1008aa",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "915309a7-aa37-41ba-ae13-3735ddc22929",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ba2e67a-1f09-4412-826f-9541e9b062db",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}